viewport width was also including the scrollbar which let to bugs with the horizontal bar.

--- a/src/macro-components/Header/Header.module.scss
+++ b/src/macro-components/Header/Header.module.scss
@@ -4,7 +4,7 @@
   height: var(--app-height);
   position: relative;
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
   background: url("/assets/images/2.png") no-repeat center;
   background-size: cover;
   right: 0;
@@ -14,23 +14,17 @@
   &:before {
     position: absolute;
     content: "";
-    width: 100vw;
+    width: 100%;
     height: var(--app-height);
     background: #000030;
     background: radial-gradient(circle, rgba(0, 0, 48, 0.75) 0%, rgba(0, 0, 6, 1) 100%);
   }
 
-  &__container {
-    position: relative;
-    height: var(--app-height);
-    padding: 0;
-  }
-
   &__content {
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    transform: translateY(-50%);
+    position: relative;
+    height: 100%;
+    display: flex;
+    align-items: center;
 
     h1 {
       display: block;
@@ -59,6 +53,7 @@
 
   &__social-media {
     position: absolute;
+    z-index: 2;
     bottom: 2rem;
     @include respond-below(md) {
       display: none;
