--- a/src/micro-components/Container/Container.module.scss
+++ b/src/micro-components/Container/Container.module.scss
@@ -7,6 +7,7 @@
   max-width: 1320px;
   min-width: 1320px;
   padding: 2rem 1rem;
+  height: 100%;
   position: relative;
   z-index: 1;
 
