--- a/src/micro-components/FixedPage/FixedPage.module.scss
+++ b/src/micro-components/FixedPage/FixedPage.module.scss
@@ -1,6 +1,6 @@
 .fixed-page {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   overflow: hidden;
   background: rgb(0, 0, 0);
