--- a/src/micro-components/Navigation/Navigation.module.scss
+++ b/src/micro-components/Navigation/Navigation.module.scss
@@ -2,7 +2,7 @@
 
 .nav {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   z-index: 20;
   display: flex;
   align-items: center;
