--- a/src/micro-components/Section/Section.module.scss
+++ b/src/micro-components/Section/Section.module.scss
@@ -3,7 +3,7 @@
 .section {
   padding: 0;
   margin: 0;
-  width: 100vw;
+  width: 100%; //to prevent bugs with content that is not properly sizes
   overflow: hidden;
   position: relative;
 
