--- a/src/micro-components/SmallHeader/SmallHeader.module.scss
+++ b/src/micro-components/SmallHeader/SmallHeader.module.scss
@@ -14,7 +14,7 @@
     content: "";
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     background: #000030;
     background: radial-gradient(circle, rgba(0, 0, 48, 0.75) 0%, rgba(0, 0, 6, 1) 100%);
